# onpe-eg2026

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dataset-metadata.json  fuentes_datos.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
data/registry/: resoluciones_eg2026.yaml
docs/: ARCHITECTURE.md  AUDIT_v1.0.md  DATA_DICTIONARY.md  DISTRIBUTED_DOWNLOAD.md  LIMITATIONS.md  METHODOLOGY.md  RELEASE_NOTES_v1.0.md  linkedin_post_draft.md
notebooks/: 01-getting-started.ipynb  02-participacion-por-region.ipynb  03-resultados-presidencial.ipynb  04-voto-exterior.ipynb  05-anomaly-detection.ipynb
ops/launchd/: com.onpe.aggregates.plist  com.onpe.aggregates.plist.template  com.onpe.datosabiertos.plist  com.onpe.datosabiertos.plist.template  install.sh
ops/windows/: README.md  setup-worker.bat
scripts/: analytics_report.py  build_choropleth.py  build_curated.py  crawl_dims.py  crawl_mesas.py  crawl_reniec_padron.py  crawl_resoluciones.py  daily_refresh.py  dashboard.py  detect_anomalies.py  download_geojsons.py  download_pdfs.py  dq_check.py  enrich_curated.py  export_csv.py  generate_cover.py  ingest_datosabiertos.py  ingest_historico_eg2021.py  investigate_anomaly_240.py  migrate_null_dtypes.py  monitor_datosabiertos.py  prepare_release.py  smoke.py  snapshot_actas.py  snapshot_aggregates.py  validate_ambitos.py
src/onpe/: __init__.py  actas.py  aggregates.py  client.py  crawler.py  datosabiertos.py  endpoints.py  enrich.py  geojson.py  locks.py  mesas.py  pdfs.py  reniec_padron.py  resoluciones.py  schemas.py  storage.py  utils.py
tests/: conftest.py  test_all_candidatos.py  test_build_curated.py  test_client.py  test_coerce_null_columns.py  test_datosabiertos.py  test_detect_anomalies.py  test_enumerate_tasks.py  test_export_csv.py  test_geojson.py  test_id_acta.py  test_locks.py  test_normalize_acta.py  test_pdfs.py  test_prepare_release.py  test_reniec_padron.py  test_resoluciones.py  test_schemas.py  test_shard_filter.py
