[project]
name = "onpe-eg2026"
version = "0.1.0"
description = "Ingesta de resultados ONPE EG2026 desde el API reverse-engineered"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "f3r21", email = "31838677+f3r21@users.noreply.github.com" }]
dependencies = [
    "httpx[http2]>=0.27",
    "tenacity>=8.5",
    "polars>=1.8",
    "pyarrow>=17.0",
    "google-cloud-storage>=3.10.1",
    "beautifulsoup4>=4.14.3",
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
query = ["duckdb>=1.1"]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onpe"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "RUF"]
ignore = [
    "E501",    # line too long (gestionado por formatter)
    "RUF001",  # ambiguous unicode en strings (×, guiones es válido es-419)
    "RUF002",  # ambiguous unicode en docstrings
    "RUF003",  # ambiguous unicode en comments
    "N815",    # camelCase en variables (nombres de API ONPE son camelCase)
]

[tool.ruff.lint.per-file-ignores]
# Tests usan identificadores mimetizando el API ONPE (idActa, archivoId).
"tests/*" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"
